@@ -13,7 +13,6 @@ dfhack_plugin(eventExample eventExample.cpp)
 dfhack_plugin(frozen frozen.cpp)
 dfhack_plugin(kittens kittens.cpp LINK_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
 dfhack_plugin(memview memview.cpp memutils.cpp LINK_LIBRARIES lua)
-dfhack_plugin(notes notes.cpp)
 dfhack_plugin(onceExample onceExample.cpp)
 dfhack_plugin(renderer-msg renderer-msg.cpp)
 dfhack_plugin(rprobe rprobe.cpp)
